기능 구현 완료 코드 리팩토링 필요한지 파악해보기

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -37,6 +37,7 @@
 						android:id="@+id/toolbar_cancel"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
+						android:onClick="@{()-> vm.toolbarCancel()}"
 						android:layout_centerVertical="true"
 						android:src="@drawable/ic_clear_white_24dp"/>
 
